--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIOHS SPHERE</title>
-    <link rel="icon" href="file:///home/chronos/u-ff813e060e527b4b8183c8ace4c1a2fd236ae28c/MyFiles/Downloads/BIOHS.jpg"/>
+    <link rel="icon" href="BIOHS.jpg"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
@@ -16,7 +16,7 @@
 <body>
     <section class="header">
         <nav>
-            <img src="file:///home/chronos/u-ff813e060e527b4b8183c8ace4c1a2fd236ae28c/MyFiles/Downloads/Logo.png">
+            <img src="Logo.png">
             <div class="nav-links" id="navLinks">
                 <ul>
                     <li><a href="">Home</a></li>
@@ -92,7 +92,7 @@
     <footer>
         <div class="row">
             <div class="col">
-                <img src="file:///home/chronos/u-ff813e060e527b4b8183c8ace4c1a2fd236ae28c/MyFiles/Downloads/Logo.png" height="45" class="logo"><br><br><br><br>
+                <img src="Logo.png" height="45" class="logo"><br><br><br><br>
             </div>
             <div class="col">
                 <h3> Contact Us </h3>
