--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>        
         </nav>
 
-<H2> About us </H2>
+<H2 color:"white";> About us </H2>
         <!-- About -->
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
