--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>        
         </nav>
 
-<h2><font color="#fff"> About us </h2>
+<h2 style="color: white;"> About us </h2>
         <!-- About -->
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
