--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BIOHS SPHERE</title>
-    <link rel="icon" href="blob/main/BIOHS.jpg"/>
+    <link rel="icon" href="BIOHS.jpg"/>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
@@ -92,7 +92,7 @@
     <footer>
         <div class="row">
             <div class="col">
-                <img src="blob/main/Logo.png" height="45" class="logo"><br><br><br><br>
+                <img src="Logo.png" height="45" class="logo"><br><br><br><br>
             </div>
             <div class="col">
                 <h3> Contact Us </h3>
