--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <footer>
         <div class="row">
             <div class="col">
-                <img src="blob/main/Logo.png" height="45" class="logo"><br><br><br><br>
+                <img src="Logo.png" height="45" class="logo"><br><br><br><br>
             </div>
             <div class="col">
                 <h3> Contact Us </h3>
