--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <ul>
                     <li><a href="https://biohs.github.io/Home">Home</a></li>
                     <li><a href="https://biohs.github.io/About">About</a></li>
-                    <li><a href="">Grade 11</a></li>
-                    <li><a href="">Grade 12</a></li>
+                    <li><a href="https://biohs.github.io/G11">Grade 11</a></li>
+                    <li><a href="https://biohs.github.io/G12">Grade 12</a></li>
                 </ul>
             </div>        
         </nav>
