--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>BIOHS SPHERE</title>
     <link rel="icon" href="BIOHS.jpg"/>
     <link rel="stylesheet" href="style.css"/>
-    <link href="./pointer.css" rel="stylesheet">
-    <script src="./pointer.js"></script>
 </head>
 
 <body>
@@ -41,7 +39,7 @@
               </div>
               <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body row">
-                  <div class="col-sm-12 col-md-6 col-lg-6 col-md-offset-1 col-lg-offset-1">  BIOHS is a website that provides comprehensive summaries for the units of biology and health science subjects for grade 11 and 12. </div>
+                  <div class="col-sm-12 col-md-6 col-lg-6 col-md-offset-1 col-lg-offset-1">  BIOHS is a website that provides comprehensive summaries for the units of health science subjects for grades 11 and 12.<br>In term 3 biology comprehensive summaries will be available in the website for G11 advanced & G12 general. </div>
                   
                 </div>
               </div>
@@ -78,7 +76,7 @@
                 <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                   <div class="panel-body">
                     
-                    <div style="color:white" class="col-sm-12 col-md-6 col-lg-6 col-md-offset-1 col-lg-offset-1">  Summaries pdf done by Za.</div>
+                    <div style="color:white" class="col-sm-12 col-md-6 col-lg-6 col-md-offset-1 col-lg-offset-1">  PDF summaries done by Za.</div>
                   </div>
                 </div>
               </div>
