--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="panel panel-default">
               <div style="border:whitesmoke; border-width:1px; border-style:solid;" class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
-                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" aria-expanded="true" aria-controls="collapseOne">
                    
                     <div class="row0"> 
                        What is BIOHS website ?<br>
@@ -47,7 +47,7 @@
             <div class="panel panel-default">
                 <div style="border:whitesmoke; border-width:1px; border-style:solid;" class="panel-heading" role="tab" id="headingTwo">
                   <h4 class="panel-title">
-                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" aria-expanded="false" aria-controls="collapseTwo">
                       <div class="row0"> 
                          What is its purpose?<br>
                      </div>
@@ -66,7 +66,7 @@
               <div class="panel panel-default">
                 <div style="border:whitesmoke; border-width:1px; border-style:solid;" class="panel-heading" role="tab" id="headingThree">
                   <h4 class="panel-title">
-                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" aria-expanded="false" aria-controls="collapseThree">
                       <div class="row0"> 
                         Teaching services<br>
                      </div>
