--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
                  
-		  <div class="col-sm-12 col-md-6 col-lg-6 col-md-offset-1 col-lg-offset-1">  BIOHS is a website that provides comprehensive summaries for the units of health science subjects for grades 11 and 12.<br>In term 3 biology comprehensive summaries will be available in the website for G11 advanced & G12 general. </div>
+		  <div style="color:white" class="col-sm-12 col-md-6 col-lg-6 col-md-offset-1 col-lg-offset-1">  BIOHS is a website that provides comprehensive summaries for the units of health science subjects for grades 11 and 12.<br>In term 3 biology comprehensive summaries will be available in the website for G11 advanced & G12 general. </div>
                 </div>
               </div>
             </div>
