--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
                   <div class="panel-body">
                     
-                    <div style="color:white" class="col-sm-12 col-md-6 col-lg-6 col-md-offset-1 col-lg-offset-1">  PDF summaries done by Za.</div>
+                    <div style="color:white" class="col-sm-12 col-md-6 col-lg-6 col-md-offset-1 col-lg-offset-1">  PDF summaries done by Zainab Yhya</div>
                   </div>
                 </div>
               </div>
